fixed main image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="main">
 		<div class="container">
 			<h1 class="title-bar">Tesla Model 3</h1>
-			<h3 class="subtitle-bar">Accelerating Sustainable Transport</h3>
+			<h3 class="subtitle-bar">Accelerating Sustainable Transportation</h3>
 			<a class="download" href="#">GET THE NEWSLETTER</a>
 		</div>
 	</div>
